# lve_tutorial

./: .env.cmake  .gitignore  CMakeLists.txt  README.md
models/: pumpkin_1.mtl  wood_shield_1.mtl
shaders/: point_light.frag.spv  simple_shader.frag.spv
src/: keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp  ze_app.cpp  ze_app.hpp  ze_buffer.cpp  ze_buffer.hpp  ze_camera.cpp  ze_camera.hpp  ze_descriptors.cpp  ze_descriptors.hpp  ze_device.cpp  ze_device.hpp  ze_frame_info.hpp  ze_game_object.cpp  ze_game_object.hpp  ze_model.cpp  ze_model.hpp  ze_pipeline.cpp  ze_pipeline.hpp  ze_renderer.cpp  ze_renderer.hpp  ze_swap_chain.cpp  ze_swap_chain.hpp  ze_utils.hpp  ze_window.cpp  ze_window.hpp
src/shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
